public/stylesheets/sass/mau.scss
/* ... */
.acct span.edit,
.gi span.edit {
    float: right;
    font-size: 80%;
}

.back-to-profile-btn {
    text-align: center;
}
.edit-sections {
    margin: auto;
    width: 560px;
    padding-bottom: 20px;
}

.inner-sxn {
    margin: 20px auto;
    font-size: 12px;

    .edit-table-header {
        text-align: center;
        font-weight: bold;
    }
    &.left {
        float:left;
    }
    &.right {
        float:right;
    }
    table {
        margin: auto;
    }
    .micro-icon {
        width: 16px;
        margin-right: 2px;
    }
    .entry-table {
        input {
        }
        td { 
            padding: 4px 4px;
        }
    }
        
    .input-name, .input, .input-err {
        padding-top: 0;
        vertical-align: top
    }
    li {
        list-style: outside circle;
    }
    ul {
        padding-bottom: 8px;
    }
}
.edit-table-header {
    line-height: 1.1em;
}
.edit-table-header.splitter {
    margin: 20px auto;
    float: left;
    text-align:center;
    font-size: x-small;
}

.edit-profile-sxn {
    div {
        text-align: left;
        &.buttons {
            margin-top: 10px;
            text-align: center;
        }
    }
    .center {
        text-align: center;
    }
    &#events {
        .inner-sxn {
            width: 450px;
        }
        .yes-no-radios {
            margin: auto;
            width: 220px;
            text-align: center;
            input[type=radio] { 
                display:none;
            }
            .radio-container {
                float: left;
                width: 110px;
            }
            .formbutton {
                margin: 0 10px;
                -moz-border-radius: 4px;
                -webkit-border-radius: 4px;
                padding: 2px;
                text-align: center;
                &:hover {
                    font-weight: bold;
                    color: #000;
                }
            }
        }
        .buttons {
            display: none;
        }
        .os-status span {
            color: #fff;
            font-weight: bold;
        }
    }
}

.chpasswd-instructions {
    font-size: 80%;
    text-align: left;
    width: 60%;
}

.entry-table {
    .input-err {
        font-size: x-small;
        padding-left: 10px;
    }
    td {
        vertical-align: top;
    }
}

/* nav bar link */
a.lknav {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    font-weight:bold;
    &:link, &:visited {
        color: #333;
    }
    &:hover {
        color: #FEF7CA;
    }
    &:active {
        color: #738294;
    }
}

/* link for light background like login and footer (dark text) */
a.lkdark {
    &:link, &:visited, &active {
        color: #888;
    }
    &:hover {
        color: #442222;
    }
}

a.lksubtle, a.lksubtle:link, a.lksubtle:visited ,a.lksubtle:active {
    color: #888;
    &:hover {
        color: #dcd5a8;
    }
}

a.formbutton {
    &:link, &:visited, &active {
        color: #422;
    }
    &:hover {
        color: #888;
    }
}


/* default link colors assuming dark background */
a {
    text-decoration: none;
    &:link {
        color: #FEF7CA;
    }

    &:visited {
        color: #FEF7CA;
    }
    &:hover {
        color: #554444;
    }
    &:active {
        color: #FEF7CA;
    }
}

/* for medium tag cloud matches */
.tagmatch a:link {
    color: #cc77cc;
}

/* this is the search box on the header.  it has a different color than the other input fields to set it apart.

*/
#artisthemission {
    height: 100%;
    padding-top: 6px;
}
#header_bar,
#footer_bar {
    background-color: #FFFFFF;
    background-image: url(/images/gradients.png);
    background-repeat: repeat-x;
    background-position: 0 -50px; /* 40px gradient */
    border: 0;
    color: #666666;
    line-height: 33px;
    vertical-align:middle;
    height: 33px;
    width: 898px;
    padding:0;
    margin:0;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    position:relative;
    z-index: 1;
}
#header_bar {
    .heart {
        font-size: 20px;
    }
}
#footer_bar div {
    line-height:33px;
}
#artisthemission { float: left; margin-left: 8px; }
#nav_bar {}
#sidebar_nav {
    width:200px;
    margin: 16px auto;
    border: 1px solid #444;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    a { 
        position: relative; 
        letter-spacing: 0.1em;
    }
    ul {
    }
    li { 
        padding: 2px 12px 3px;
        text-align: left;
        line-height: 24px;
        vertical-align: middle;
        &:hover {
            background: #222;
        }
    }
    
    .heart {
        float: left;
        width: 16px;
        height: 16px;
        margin-right: 6px;
        margin-top: 4px;
    }
}

#footer_links,
#nav_bar,
#search_nav2,
#search_btn2 {
    display: inline;
    float:right;
}
#search_nav2 { 
    height:33px; position: relative; 
    form { 
        position: relative; 
        top: 5px; 
    }
}
#footer_copy {
    display:inline;
    float: left;
    padding-left: 10px;
}
#footer_links {
    padding-right: 10px;
    span {
        padding: 0 6px;
    }
}

input.srch {
    background-color:#D6f3ff;
    margin-left: 8px;
    margin-right: 8px;
}
#search_btn2 {
    vertical-align: middle;
    line-height: 28px;
    margin-right: 10px;
}
#search_icon { vertical-align:middle; }

/* these three are important on the "edit" pages
   colors should be set the same for textarea, select and srch
   */
input, textarea, select {
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    background-color:#FEF7CA;
}
button {
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
}
input.chkbox {
    margin-right: 20px;
}

input.txt, input.txtlogin, input.txtarea, input.txtarea-sm, select.dropdown {
    margin-right: 5px;
}

input.txt, input.txtlogin {
    margin-left: 20px;
}

input.txtarea-sm, input.txtarea{
    width: 500px;
}
input.txtarea-sm, input.txtarea, select.dropdown {
    margin-left: 50px;
}
/* ... */

